k8s/production/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    ingressClassName: "gce" 
    networking.gke.io/managed-certificates: gopost-managed-cert
    networking.gke.io/disable-http-redirect: "true"
spec:
  rules:
    - host: side-project-gopost.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 2000
